--- a/aws0822Boot/src/main/resources/application.properties
+++ b/aws0822Boot/src/main/resources/application.properties
@@ -11,7 +11,11 @@ spring.thymeleaf.cache=false
 server.error.whitelabel.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-spring.jpa.defer-datasource-initialization=true 
-spring.jpa.hibernate.ddl-auto=create
+# 절대 운영 환경에서는 false !
+spring.jpa.defer-datasource-initialization=false
+# spring.jpa.hibernate.ddl-auto=create (삭제되고 다시 생성)
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
+
+spring.jpa.database=mysql
+spring.jpa.generate-ddl=true
