--- a/aws0822Boot/src/main/resources/application.properties
+++ b/aws0822Boot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=aws0822Boot
 server.address = localhost
-server.port=8024
+server.port=8050
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mysql?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 # 절대 운영 환경에서는 false !
 spring.jpa.defer-datasource-initialization=false
 # spring.jpa.hibernate.ddl-auto=create (삭제되고 다시 생성)
+# spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
 
